# tacky-borders

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.rs  justfile  old_schema.json  schema.json  schema_test.json
benches/: env_bench.rs
resources/: config.json  config.jsonc  config.yaml
src/: animation_manager.rs  animations.rs  app_manager.rs  bezier.rs  border_config.rs  colors.rs  config_watcher.rs  error.rs  event_hook.rs  keybinding.rs  keyboard_hook.rs  lib.rs  logger.rs  main.rs  multimedia_timer.rs  parsed_config.rs  render_resources.rs  sys_tray.rs  sys_tray_icon.rs  theme_manager.rs  timer.rs  user_config.rs  utils.rs  winapi.rs  window_border.rs  window_event_hook.rs  windows_api.rs  windows_callback.rs  windowsapi.rs
src/animation/: engine.rs  manager.rs  mod.rs  wrapper.rs
src/animations/: animation.rs  easing.rs  mod.rs  parser.rs  timer.rs  utils.rs  wrapper.rs
src/border_manager/: border.rs  mod.rs
src/colors/: color.rs  error.rs  gradient.rs  mod.rs  parser.rs  utils.rs
src/core/: animation.rs  app_state.rs  dimension.rs  duration.rs  effect.rs  effects.rs  helpers.rs  keybindings.rs  length.rs  mod.rs  rect.rs  theme.rs  thread.rs  timer.rs  value.rs
src/deserializer/: error.rs  mod.rs
src/effect/: engine.rs  manager.rs  mod.rs  wrapper.rs
src/env/: funcs.rs  mod.rs  strings.rs  wtraits.rs
src/resources/: config.yaml
src/utils/: open.rs
