[package]
name = "tacky-borders"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 0
lto = "off"

[dependencies]
serde = "1.0.217"
regex = "1.11.1"
serde_yml = "0.0.12"
log = "0.4.22"
rustc-hash = "2.1.0"
anyhow = "1.0.95"
simple-bezier-easing = "0.1.1"
serde_jsonc2 = "0.1.1"
tray-icon-win = "0.1.5"
win-open = "0.1.2"
notify-win-debouncer-full = "0.1.2"
sp_log2 = "0.1.3"
colorparser-css = { version = "0.0.7", features = ["hash-colors", "serde"] }


[dependencies.windows]
version = "0.59.0"
features = [
  "Win32_Foundation",
  "Foundation_Numerics",
  "Win32_Globalization",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
]

[build-dependencies]
winresource = "0.1.19"
