[package]
name = "tacky-borders"
version = "1.0.0"
edition = "2024"

[profile.dev]
opt-level = 0
lto = "off"

[features]
default = ["fast-hash", "json"]
fast-hash = ["fx-hash"]
yml = ["serde_yml", "colorparser-css/theme_yml"]
json = ["serde_jsonc2"]

[dependencies]
serde = "1.0.217"
regex = "1.11.1"
serde_yml = { version = "0.0.12", optional = true }
log = "0.4.25"
anyhow = "1.0.95"
simple-bezier-easing = "0.1.1"
tray-icon-win = "0.1.5"
win-open = "0.1.2"
notify-win-debouncer-full = "0.1.2"
sp_log2 = "0.1.3"
colorparser-css = { version = "0.1.5", features = [
  "named-colors",
  "serde",
  "theme",
  "fast-hash",
  "schema",
] }
fx-hash = { version = "0.1.0", optional = true }
serde_jsonc2 = { version = "0.1.2", optional = true }
schema_jsonrs = "0.1.0"

[dependencies.windows]
version = "0.59.0"
features = [
  "Win32_Foundation",
  "Foundation_Numerics",
  "Win32_Globalization",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
]

[build-dependencies]
winresource = "0.1.19"
